@@ -31,8 +31,7 @@ class FileAnalysis(BaseAnalysis):
                  code_item_type: str = None,
                  zip_password: str = None):
         super().__init__(api)
-
-        if [file_path, file_hash, file_stream].count(None) != 2:
+        if [file_path, file_hash, file_stream].count(None) < 2:
             raise ValueError('Choose between file hash, file stream or file path analysis')
 
         if file_hash and code_item_type:
@@ -68,20 +67,7 @@ class FileAnalysis(BaseAnalysis):
     def from_analysis_id(cls, analysis_id: str, api: IntezerApi = None) -> Optional['FileAnalysis']:
         api = api or get_global_api()
         response = api.get_file_analysis_response(analysis_id, True)
-        if response.status_code == HTTPStatus.NOT_FOUND:
-            return None
-        response_json = response.json()
-
-        _assert_analysis_status(response_json)
-
-        analysis_report = response_json.get('result')
-        if not analysis_report:
-            return None
-
-        analysis = cls(file_hash=analysis_report['sha256'], api=api)
-        analysis._set_report(analysis_report)
-
-        return analysis
+        return cls._create_analysis_from_response(response, api, analysis_id)
 
     @classmethod
     def from_latest_hash_analysis(cls,
@@ -104,6 +90,9 @@ class FileAnalysis(BaseAnalysis):
         return self._api.get_file_analysis_response(self.analysis_id, False)
 
     def _send_analyze_to_api(self, **additional_parameters) -> str:
+        if [self._file_path, self._file_hash, self._file_stream].count(None) == 3:
+            raise ValueError('Choose between file hash, file stream or file path analysis')
+
         if self._file_hash:
             return self._api.analyze_by_hash(self._file_hash,
                                              self._disable_dynamic_unpacking,
@@ -204,7 +193,7 @@ Analysis = FileAnalysis
 
 
 class UrlAnalysis(BaseAnalysis):
-    def __init__(self, url: str, api: IntezerApi = None):
+    def __init__(self, url: Optional[str] = None, api: IntezerApi = None):
         super().__init__(api)
         self._api.assert_on_premise_above_v21_11()
         self.url = url
@@ -214,18 +203,9 @@ class UrlAnalysis(BaseAnalysis):
     def from_analysis_id(cls, analysis_id: str, api: IntezerApi = None) -> Optional['UrlAnalysis']:
         api = api or get_global_api()
         response = api.get_url_analysis_response(analysis_id, True)
-        if response.status_code == HTTPStatus.NOT_FOUND:
-            return None
-
-        response_json = response.json()
-        _assert_analysis_status(response_json)
-
-        analysis_report = response_json.get('result')
-        if not analysis_report:
-            return None
-
-        analysis = UrlAnalysis(analysis_report['submitted_url'], api=api)
-        analysis._set_report(analysis_report)
+        analysis = cls._create_analysis_from_response(response, api, analysis_id)
+        if analysis._report:
+            analysis.url = analysis._report['submitted_url']
 
         return analysis
 
@@ -233,6 +213,8 @@ class UrlAnalysis(BaseAnalysis):
         return self._api.get_url_analysis_response(self.analysis_id, False)
 
     def _send_analyze_to_api(self, **additional_parameters) -> str:
+        if not self.url:
+            raise ValueError('url must be provided')
         return self._api.analyze_url(self.url, **additional_parameters)
 
     @property
@@ -253,11 +235,3 @@ class UrlAnalysis(BaseAnalysis):
 @deprecated('This method is deprecated, use UrlAnalysis.from_analysis_by_id instead to be explict')
 def get_url_analysis_by_id(analysis_id: str, api: IntezerApi = None) -> Optional[UrlAnalysis]:
     return UrlAnalysis.from_analysis_id(analysis_id, api)
-
-
-def _assert_analysis_status(response: dict):
-    if response['status'] in (consts.AnalysisStatusCode.IN_PROGRESS.value,
-                              consts.AnalysisStatusCode.QUEUED.value):
-        raise errors.AnalysisIsStillRunningError()
-    if response['status'] == consts.AnalysisStatusCode.FAILED.value:
-        raise errors.AnalysisFailedError()
