@@ -484,7 +484,8 @@ class IntezerApi:
         if response.status_code == HTTPStatus.NOT_FOUND:
             raise errors.HashDoesNotExistError(response)
         elif response.status_code == HTTPStatus.CONFLICT:
-            raise errors.AnalysisIsAlreadyRunningError(response)
+            running_analysis_id = response.json().get('result', {}).get('analysis_id')
+            raise errors.AnalysisIsAlreadyRunningError(response, running_analysis_id)
         elif response.status_code == HTTPStatus.FORBIDDEN:
             raise errors.InsufficientQuotaError(response)
         elif response.status_code == HTTPStatus.BAD_REQUEST:
